# rl

./: README.md  pyproject.toml
data/GSM8K_zh/: GSM8K_zh_test.json  README.md  dataset_infos.json
gsm/: __init__.py
gsm/datasets/: __init__.py  base.py  datasets.py
gsm/evaluate/: __init__.py  base.py  gsm8k_evaluator.py
gsm/pipeline/: base.py  eval_pipeline.py  grpo_pipeline.py  sft_pipeline.py
gsm/reward/: base.py  math_reward.py
gsm/train/: __init__.py  base.py  merge_lora_model.py  train_grpo.py  train_sft.py
gsm8k_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: merge_lora.py  run_eval.py  run_grpo.py  run_sft.py
tests/: infer.py
tests/datasets/: file_split.py  show_dataset.py  test_datasets.py
